# 3dtiles-dl

./: .gitignore  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
app/: layout.tsx  page.tsx
components/glib/: GlibLoader.tsx  GlibViewer.tsx
data/: aurthur_seat.geojson
scripts/: download_tiles.py  download_tiles_geojson.py  generate-tileset.js
src/: README.md  geojson_utils.py  tile.py
